# delta

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Checker.h  Parser.h  Settings.h  delta.cpp
